# intolerable-bot

./: .gitignore  LICENSE  Main.hs  README.md  intolerable-bot.cabal  rdota2.bayes  reply-learndota2.md  reply.md
src/: Args.hs  BanList.hs  Bot.hs  Paths_intolerable_bot.hs
src/Control/Applicative/Trans/: Either.hs
src/Control/Concurrent/: WriteSem.hs
