name:                intolerable-bot
version:             0.1.0.0
description:         bot for posting helpful links to people who are new to Dota on reddit.com/r/Dota2
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:
  reply.md

executable intolerable-bot
  main-is:             Main.hs
  default-extensions:
    FlexibleContexts,
    OverloadedStrings
  build-depends:
    base == 4.7.*,
    bytestring,
    containers,
    mtl,
    old-locale,
    optparse-applicative,
    parsec,
    reddit,
    text,
    time,
    transformers
  hs-source-dirs:      ./, src/
  default-language:    Haskell2010
  ghc-options:         -Wall
