name:                intolerable-bot
version:             0.1.0.0
description:         bot for posting helpful links to people who are new to Dota on reddit.com/r/Dota2
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable intolerable-bot
  main-is:             Main.hs
  default-extensions:
    FlexibleContexts,
    OverloadedStrings
  build-depends:
    base >= 4.7 && < 4.9,
    bytestring,
    containers,
    mtl,
    optparse-applicative == 0.11.*,
    parsec,
    reddit,
    text,
    time,
    time-locale-compat,
    transformers
  hs-source-dirs:      ./, src/
  default-language:    Haskell2010
  ghc-options:         -Wall
