name:                intolerable-bot
version:             0.2.0.0
description:         bot for posting helpful links to people who are new to Dota on reddit.com/r/Dota2
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Bot
  other-modules:
    Args
    Control.Applicative.Trans.Either
    Control.Concurrent.WriteSem
  build-depends:
    base == 4.8.*,
    aeson,
    async,
    binary,
    bounded,
    containers,
    data-counter,
    data-default-class,
    naive-bayes,
    optparse-applicative,
    reddit,
    stm,
    text,
    time,
    transformers,
    yaml
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
    UndecidableInstances
    ViewPatterns
  ghc-options: -Wall

executable intolerable-bot
  main-is:             Main.hs
  default-extensions:
    FlexibleContexts,
    OverloadedStrings
  build-depends:
    base == 4.8.*,
    intolerable-bot
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -Wall
